--- a/h/ho/hoc/hockeysfuture.com.html
+++ b/h/ho/hoc/hockeysfuture.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hockeysfuture.com privacy policy that was archived on 2004-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040402074450id_/http%3A//www.hockeysfuture.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hockeysfuture.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206232837id_/http%3A//www.hockeysfuture.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Hockey's Future: The Hockey Prospects Resource (Covering the WHL, QMJHL,AHL, OHL, College, The NHL Entry Draft, and All Junior Hockey)</title>
@@ -144,11 +144,23 @@ window.location.href = URL;
             <td>&nbsp;</td>
             <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody><tr>
-                  <td width="196"><a href="./"><img src="../images-new/logo.gif" width="196" height="79" alt="" border="0"></a></td>
+                  <td width="196"><a href="./"><img src="../images-new/logo-new.gif" width="280" height="79" alt="" border="0"></a></td>
                   <td width="480" background="../images-new/bg_bannertop.jpg">
-			<a href="http://www.hockeysfuture.com/admanager/click.php?bannerID=58"><img src="http://www.hfboards.com/images/egbanner3.gif" width="468" height="60" alt="Everest Gear" border="0"></a><!---<div align="center"><a href="http://www.hockeysfuture.com/admanager/click.php?n=mnbanner1"><img src=http://www.hockeysfuture.com/admanager/phpads.php?what=mnbanner1&n=mnbanner1 width=468 height=60 alt="" border=0></a></div>
-			 <div align="center"> <a href="allproregister.php"><img src="../images-new/apr468X60_1.gif" width="468" height="60" hspace="5" border=0></a></div> -->
-                  </td>
+			<div align="center"><script type="text/javascript"><!--
+google_ad_client = "pub-4663141239011585";
+google_ad_width = 234;
+google_ad_height = 60;
+google_ad_format = "234x60_as";
+google_ad_channel ="";
+google_ad_type = "text";
+google_color_border = "336699";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></div>                   </td>
                   <td><a href="http://www.hfboards.com"><img src="../images-new/b_hfboard.gif" alt="" name="Image8" width="69" height="79" border="0" id="Image8" onmouseover="MM_swapImage('Image8','','../images-new/b_hfboard_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
                 </tr>
               </tbody></table>
@@ -164,13 +176,13 @@ window.location.href = URL;
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tbody><tr>
             <td valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
-                <tbody><tr>
+                <!--<tr>
                   <td colspan="4" valign="top" bgcolor="#004278"><div align="center">
-                    <script language="JavaScript" src="display.js"></script><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><div align="center"><img src="../images-new/banner/top_header_expand.gif" width="750" height="27" id="Out2" class="Outline" style="cursor: hand"><br><a href="http://www.sitevalley.com/?refid=27"><img src="../images-new/banner/01.gif" width="252" height="125" border="0"><img src="../images-new/banner/02.gif" width="247" height="125" border="0"><img src="../images-new/banner/03.gif" width="251" height="125" border="0"></a></div></td></tr></tbody></table>
-                      <script language="JavaScript" src="clickhandler.js"></script>
+                    <SCRIPT language="JavaScript" SRC="display.js"></SCRIPT>
+                      <SCRIPT language="JavaScript" SRC="clickhandler.js"></SCRIPT>
                   </div></td>
-                </tr>
-                <tr>
+                </tr>-->
+                <tbody><tr>
                   <td width="13" rowspan="3" valign="top" background="../images-new/left.gif"><img src="../images-new/spacer.gif" width="13" height="50"></td>
                   <td colspan="2" valign="top" bgcolor="#FFFFFF"><table width="100%" border="0" cellpadding="0" cellspacing="0" background="../images-new/bg_orange.gif">
                     <tbody><tr>
@@ -178,58 +190,57 @@ window.location.href = URL;
                       <td width="35"><a href="./"><img src="../images-new/b_home.gif" name="Image1" width="35" height="22" border="0" id="Image1" onmouseover="MM_swapImage('Image1','','../images-new/b_home_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
                       <td width="141"><a href="top50.php"><img src="../images-new/b_hftop50.gif" name="Image2" width="141" height="22" border="0" id="Image2" onmouseover="MM_showHideLayers('Layer1','','show');MM_swapImage('Image2','','../images-new/b_hftop50_on.gif',1)" onmouseout="MM_showHideLayers('Layer1','','hide');MM_swapImgRestore()"></a></td>
                       <td width="113"><a href="orgrankings.php"><img src="../images-new/b_nhlorgrankings.gif" name="Image5" width="113" height="22" border="0" id="Image5" onmouseover="MM_swapImage('Image5','','../images-new/b_nhlorgrankings_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
-                      <td width="117"><a href="playersinterviews.php"><img src="../images-new/b_playerinterviews.gif" alt="" name="Image3" width="117" height="22" border="0" id="Image3" onmouseover="MM_swapImage('Image3','','../images-new/b_playerinterviews_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+                      <td width="117"><a href="http://hockeysfuture.com/team.php?team=107"><img src="../images-new/b_playerinterviews.gif" alt="" name="Image3" width="117" height="22" border="0" id="Image3" onmouseover="MM_swapImage('Image3','','../images-new/b_playerinterviews_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
                       <td width="122"><a href="sponsorspotlight.php"><img src="../images-new/b_sponsorspotlight.gif" alt="" name="Image4" width="122" height="22" border="0" id="Image4" onmouseover="MM_swapImage('Image4','','../images-new/b_sponsorspotlight_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
                       <td width="106"><a href="nhlentrydraft.php"><img src="../images-new/b_nhlentrydraft.gif" alt="" name="Image6" width="106" height="22" border="0" id="Image6" onmouseover="MM_swapImage('Image6','','../images-new/b_nhlentrydraft_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
                       <td width="77"><a href="newsrooms.php"><img src="../images-new/b_newsrooms.gif" alt="" name="Image7" width="77" height="22" border="0" id="Image7" onmouseover="MM_swapImage('Image7','','../images-new/b_newsrooms_on.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
                       <td align="right"><img src="../images-new/menu_right.gif" width="16" height="22" alt=""></td>
                     </tr>
                   </tbody></table>
-                  <div id="Layer1" style="position: absolute; left: 69px; top: 145px; width: 170px; height: 254px; z-index: 90; background-color: rgb(235, 82, 0); border: 1px none rgb(0, 0, 0); visibility: hidden;" class="text" onmouseover="MM_showHideLayers('Layer1','','show')" onmouseout="MM_showHideLayers('Layer1','','hide')">
+                  <div id="Layer1" style="position: absolute; left: 69px; top: 118px; width: 170px; height: 254px; z-index: 90; background-color: rgb(235, 82, 0); border: 1px none rgb(0, 0, 0); visibility: hidden;" class="text" onmouseover="MM_showHideLayers('Layer1','','show')" onmouseout="MM_showHideLayers('Layer1','','hide')">
                       <table width="100%" border="0" cellpadding="4" cellspacing="1" class="textlayer">
                         <tbody><tr>
-                          <td width="12%" bgcolor="FF5F13"><div align="center"><strong>1.</strong></div></td>
-                          <td width="88%" bgcolor="FF5F13"><a href="http://www.apple.com" class="Navwhite">Nikolai
-                          Zherdev</a></td>
+                          <td bgcolor="FF5F13"><div align="center"><strong>1.</strong></div></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3126" class="Navwhite">Alexander Ovechkin</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>2.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Pascal Leclaire</a></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=884" class="Navwhite">Kari Lehtonen</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>3.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Danny Fritsche</a></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3125" class="Navwhite">Nikolai Zherdev</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>4.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Aaron Johnson</a> </td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3885" class="Navwhite">Evgeni Malkin</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>5.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Joakim Lindström</a></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3605" class="Navwhite">Marc-Andre Fleury</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>6.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Andrej Nedorost</a></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3638" class="Navwhite">Nathan Horton</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>7.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Dimitri Kosmachev</a></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3674" class="Navwhite">Dion Phaneuf</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>8.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Tim Jackman</a> </td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3214" class="Navwhite">Thomas Vanek</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>9.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Ole Kristian</a></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3533" class="Navwhite">Milan Michalek</a></td>
                         </tr>
                         <tr>
                           <td bgcolor="FF5F13"><div align="center"><strong>10.</strong></div></td>
-                          <td bgcolor="FF5F13"> <a href="#" class="Navwhite">Ivan Tkachenko</a></td>
+                          <td bgcolor="FF5F13"> <a href="http://www.hockeysfuture.com/prospect.php?pid=3778" class="Navwhite">Ryan Suter</a></td>
                         </tr>
                         <tr bgcolor="#000000">
-                          <td colspan="2" bgcolor="#000000"><div align="center"></div>                            <a href="#" class="Navwhite"><img src="../images-new/spacer.gif" width="10" height="10" border="0" align="absmiddle">View all »</a></td>
+                          <td colspan="2" bgcolor="#000000"><div align="center"></div>                            <a href="top50.php" class="Navwhite"><img src="../images-new/spacer.gif" width="10" height="10" border="0" align="absmiddle">View all »</a></td>
                         </tr>
                       </tbody></table>
                     </div>
@@ -265,7 +276,7 @@ document.write(" "+isnMonths[today.getMonth()]+" "+today.getDate()+", "+getFullY
               <option value="http://hfboards.com/">HF Boards</option>
               <option value="http://hfboards.com/prospects">Prospect Board</option>
               <option value="http://hfboards.com/traderumors">TradeRumors Board</option>
-              <option value="http://hfboards.com/cgi-bin/fantasyboard.pl">Fantasy Board</option>			  			  
+              <option value="http://hfboards.com/forumdisplay.php?forumid=61">Fantasy Board</option>			  			  
               <option value="./">   -------- TEAMS -------- </option>	
 		              <option value="/team.php?team=3">Anaheim Mighty Ducks</option>
 		              <option value="/team.php?team=25">Atlanta Thrashers</option>
@@ -300,15 +311,15 @@ document.write(" "+isnMonths[today.getMonth()]+" "+today.getDate()+", "+getFullY
 							  	  
               <option value="./">   -------- LEAGUES -------- </option>
 		              <option value="/team.php?team=32">AHL </option>
-		              <option value="/team.php?team=35">AJHL </option>
 		              <option value="/team.php?team=119">CIS </option>
+		              <option value="/team.php?team=35">CJAHL </option>
 		              <option value="/team.php?team=36">ECHL </option>
-		              <option value="/team.php?team=50">NAHL </option>
 		              <option value="/team.php?team=57">NCAA </option>
 		              <option value="/team.php?team=29">OHL </option>
 		              <option value="/team.php?team=98">Other League OTH</option>
 		              <option value="/team.php?team=31">QMJHL </option>
 		              <option value="/team.php?team=76">UHL </option>
+		              <option value="/team.php?team=50">USA Juniors </option>
 		              <option value="/team.php?team=33">USHL </option>
 		              <option value="/team.php?team=30">WHL </option>
 		              <option value="./">   -------- COUNTRY --------  </option>			  
@@ -468,8 +479,8 @@ If you have questions or concerns regarding est1967.com's Privacy Policy, please
             Policy</a>&nbsp;| <a href="termsofuse.php" class="Navorange">Terms of Service</a> |
           <a href="mailto:owner@hockeysfuture.com" class="Navorange">Feedback</a><br>
 	<span class="Copyrights">Hockeysfuture.com ©
-          2003. All Rights Reserved.<br>
-	  Friends: <a href="http://www.canuckshockey.com"><font color="gray">Canucks Hockey</font></a></span> - <a href="http://www.nhlodds.com"><font color="gray">NHL Odds</font></a></div></td>
+          1998-2004. All Rights Reserved.<br>
+	  Friends: <a href="http://www.insidehockey.com"><font color="white">Inside Hockey</font></a></span></div></td>
       </tr>
     </tbody></table>
   
