--- a/p/po/pow/powertochange.com.html
+++ b/p/po/pow/powertochange.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the powertochange.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610044925id_/http%3A//powertochange.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the powertochange.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206233215id_/http%3A//www.powertochange.com/about/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/other.dwt" --><!-- DW6 --><head>
 
@@ -162,8 +162,8 @@ Map</font></a></font><!-- #EndLibraryItem --></span></b></font></font></div>
       </tbody></table>      
       <!-- #BeginEditable "ArticleOptions" --><!-- #BeginLibraryItem "/Library/watchvideo.lbi" -->&nbsp;<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
 </font><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/listen.lbi" -->&nbsp;<font face="Verdana, Arial, Helvetica, sans-serif" size="1">
-</font><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/sendpage.lbi" --><font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;</font><a href="#" onclick="window.open('http://www.powertochange.com/php-bin/send_friend/index.php?action=click&amp;location=www.powertochange.com/about/privacy.html','SendPage','WIDTH=500 HEIGHT=540 SCREENX=500 SCREENY=540 SCROLLBARS');"><img src="../images/icon_email_black.gif" width="10" height="10" border="0"></a> 
-              <font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#000000"><a href="#" onclick="window.open('http://www.powertochange.com/php-bin/send_friend/index.php?action=click&amp;location=www.powertochange.com/about/privacy.html','SendPage','WIDTH=500 HEIGHT=540 SCREENX=500 SCREENY=540 SCROLLBARS');" "="">send 
+</font><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/sendpage.lbi" --><font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;</font><a href="#" onclick="window.open('http://www.powertochange.com/php-bin/send_friend/index.php?action=click&amp;location=powertochange.com/about/privacy.html','SendPage','WIDTH=500 HEIGHT=540 SCREENX=500 SCREENY=540 SCROLLBARS');"><img src="../images/icon_email_black.gif" width="10" height="10" border="0"></a> 
+              <font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#000000"><a href="#" onclick="window.open('http://www.powertochange.com/php-bin/send_friend/index.php?action=click&amp;location=powertochange.com/about/privacy.html','SendPage','WIDTH=500 HEIGHT=540 SCREENX=500 SCREENY=540 SCROLLBARS');" "="">send 
               page</a></font><!-- #EndLibraryItem -->&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<!-- #BeginLibraryItem "/Library/talkback.lbi" --><!-- #EndLibraryItem --><!-- #EndEditable --> <!-- #BeginEditable "BodyContent" --> 
       
 
@@ -174,7 +174,7 @@ Map</font></a></font><!-- #EndLibraryItem --></span></b></font></font></div>
 
 
 <font face="Arial, Helvetica, sans-serif"><b>Privacy Policy - Synopsis</b> </font>
-<p><font size="2" face="Arial, Helvetica, sans-serif">Power to Change Online takes all 
+<p><font size="2" face="Arial, Helvetica, sans-serif"><!--? echo $a; ?--> takes all 
   possible measures to protect the personal information of its users. We store 
   any personal data given to us as securely as possible, and NEVER sell, rent, 
   give or otherwise provide that personal data (including e-mail address) to anyone 
@@ -182,7 +182,7 @@ Map</font></a></font><!-- #EndLibraryItem --></span></b></font></font></div>
 <p> <font face="Arial, Helvetica, sans-serif"><br>
   <b>Privacy Policy - Full Text</b></font></p>
 <p><font size="2" face="Arial, Helvetica, sans-serif"><b>Who we are</b></font></p>
-<p><font size="2" face="Arial, Helvetica, sans-serif">We are Power to Change Online, a 
+<p><font size="2" face="Arial, Helvetica, sans-serif">We are <!--? echo $a; ?-->, a 
   part of Campus Crusade for Christ (International), a worldwide evangelistic 
   and discipleship ministry, with our Canadian headquarters in Langley (B.C.) 
   and with representative local ministries in over 160 countries. Our organization 
@@ -397,9 +397,9 @@ Map</font></a></font><!-- #EndLibraryItem --></span></b></font></font></div>
                 <tbody><tr> 
                   <td width="95%" height="50"><!-- #BeginLibraryItem "/Library/randomquote.lbi" --><font face="Verdana, Arial, Helvetica" size="1"> 
                     <br>
-                    <b>"</b>I've looked at your web-site a hundred times!! I like it so much that I
-can't get away from it. I learned new things that I never knew before. I
-told my friends at school about it and they really liked it too.<b>"</b> -<b>Vanessa</b>                    <br>
+                    <b>"</b>Your website contains the best information I have ever seen on the
+Internet.  The impact it made on my life was incredible from the first
+day.<b>"</b> -<b>Eric</b>                    <br>
                     <br>
                     </font><!-- #EndLibraryItem --></td>
                 </tr>
@@ -464,11 +464,11 @@ told my friends at school about it and they really liked it too.<b>"</b> -<b>Van
                 <tr> 
                   <td align="center" valign="top" height="17" width="40"> 
                     <div align="left"> 
-                                          </div>
+                      <a href="/changed/tlehman.html"><img src="/images/3x3/3x3_tlehman.gif" border="0"></a>                    </div>
                   </td>
                   <td valign="top" height="17"> 
                     <div align="left"> <font face="Verdana, Arial, Helvetica, sans-serif" size="1"> 
-                      <a href="/changed/scarto.html">Stacy Carto<br></a>Are You Happy With Your Body?                      </font> </div>
+                      <a href="/changed/tlehman.html">Tom Lehman<br></a>An Audience of One                      </font> </div>
                   </td>
                 </tr>
               </tbody></table>
@@ -498,11 +498,11 @@ told my friends at school about it and they really liked it too.<b>"</b> -<b>Van
                 <tr> 
                   <td align="center" valign="top" height="17" width="40"> 
                     <div align="left"> 
-                      <a href="/changed/rneilson.html"><img src="/images/3x3/3x3_rneilson.gif" border="0"></a>                    </div>
+                      <a href="/changed/henderson.html"><img src="/images/3x3/3x3_henderson.gif" border="0"></a>                    </div>
                   </td>
                   <td valign="top" height="17"> 
                     <div align="left"> <font face="Verdana, Arial, Helvetica, sans-serif" size="1"> 
-                      <a href="/changed/rneilson.html">Roger Neilson<br></a>The Only Way To Go                      </font> </div>
+                      <a href="/changed/henderson.html">Paul Henderson<br></a>The Goal of My Life                      </font> </div>
                   </td>
                 </tr>
               </tbody></table>
@@ -541,7 +541,7 @@ told my friends at school about it and they really liked it too.<b>"</b> -<b>Van
       us</font></a><font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;&nbsp;<font color="#3399CC">|</font></font> 
       <font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;<a href="index.html"><font color="#FFFFFF">About 
       us</font></a>&nbsp;&nbsp;<font color="#3399CC">|</font></font> <font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;<a href="link.html"><font color="#FFFFFF">Link 
-      to us</font></a>&nbsp;&nbsp;<font color="#3399CC">|</font></font> <font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;<a href="#" onclick="window.open('http://www.powertochange.com/php-bin/send_friend/index.php?action=click&amp;location=www.powertochange.com/about/privacy.html','SendPage','WIDTH=500 HEIGHT=540 SCREENX=500 SCREENY=540 SCROLLBARS');" "=""><font color="#FFFFFF">Send 
+      to us</font></a>&nbsp;&nbsp;<font color="#3399CC">|</font></font> <font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;<a href="#" onclick="window.open('http://www.powertochange.com/php-bin/send_friend/index.php?action=click&amp;location=powertochange.com/about/privacy.html','SendPage','WIDTH=500 HEIGHT=540 SCREENX=500 SCREENY=540 SCROLLBARS');" "=""><font color="#FFFFFF">Send 
       to a friend</font></a><font color="#996666">&nbsp;</font>&nbsp;<font color="#3399CC">|</font></font> 
       <font face="Verdana, Arial, Helvetica, sans-serif" size="1">&nbsp;<a href="../growth/index.html"><font color="#FFFFFF">Spiritual 
       resources</font></a></font></font></td>
